Perfil de testes e alguns fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=dealership
+spring.profiles.active=${APP_PROFILE:test}
+spring.jpa.open-in-view=false
+
+spring.security.user.name=admin
+spring.security.user.password=admin
+
+cors.origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:3000}
